[ADD] Add env attributes

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ SMTP_PORT=123
 SMTP_USERNAME=test@example.com
 SMTP_PASSWORD="abcd abcd abcd abcd"
 SMTP_TO=to1@example.com,to2@example.com
+
+LOG_FOLDER=/var/log/backup
+LOG_FILE=webhunter.log
+LOG_LEVEL=INFO
+LOG_BACKUPS=7
+
+DATABASE_PATH=db.sqlite3
